--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,19 +22,22 @@ jobs:
       - run: |
           # install hyperfine
           sudo apt-get install -y hyperfine
+          
           # build
           ./mill server.assembly
           ./mill client.jvm.assembly
           ./mill client.native.nativeLink
+          
           # start the server in background
           java -jar ./out/server/assembly.dest/out.jar &
+          
           # try JVM version
           java -jar ./out/client/jvm/assembly.dest/out.jar -c version
           java -jar ./out/client/jvm/assembly.dest/out.jar -c noop
           java -jar ./out/client/jvm/assembly.dest/out.jar -c subprocess
           java -jar ./out/client/jvm/assembly.dest/out.jar -c task1
           java -jar ./out/client/jvm/assembly.dest/out.jar -c task2
-          java -jar ./out/client/jvm/assembly.dest/out.jar -c shutdown
+          
           # try native version
           chmod +x ./out/client/native/nativeLink.dest/out
           ./out/client/native/nativeLink.dest/out.exe -c version
@@ -42,7 +45,10 @@ jobs:
           ./out/client/native/nativeLink.dest/out.exe -c subprocess
           ./out/client/native/nativeLink.dest/out.exe -c task1
           ./out/client/native/nativeLink.dest/out.exe -c task2
-          ./out/client/native/nativeLink.dest/out.exe -c shutdown
+          
           # mini bench
           hyperfine --show-output "java -jar ./out/client/jvm/assembly.dest/out.jar -c noop"
           hyperfine --show-output "./out/client/native/nativeLink.dest/out -c noop"
+          
+          # shutdown server
+          java -jar ./out/client/jvm/assembly.dest/out.jar -c shutdown
